bookinfo/05_timeouts/istio-reviews-v1-timeouts.yaml
# Set a timeout of 0.5 second to all HTTP requests to v2 of the reviews service.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  hosts:
  - reviews.bookinfo.svc.cluster.local
  http:
  - route:
    - destination:
        host: reviews.bookinfo.svc.cluster.local
        subset: v2
    timeout: 1s
